key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/static-import/p/Consts.java
package p;
public class Consts {
    public static final int FOO = 7;
    public static int twice(int x) { return 2 * x; }
}
